--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Simple Webpack Starter-Kit</title>
+  <title>Webpack</title>
 </head>
 
 <body>
-  <h1>Simple Web Dev Starter-Kit</h1>
+  <h1>Webpack 2</h1>
   <div id="app"></div>
-
-  <script src="dist/bundle.js"></script>
+  <div>
+    <img src="img/avatar.jpg" alt="avatar">
+    <img src="img/test.png" alt="test">
+  </div>
 </body>
 
 </html>
