working with new stuff, don't like hot module...

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
 <body>
   <h1>Webpack 2</h1>
   <div id="app"></div>
+  <p>Update? Or not?</p>
+  <p>Lorem ipsum dolor sit!</p>
   <div>
     <img src="img/avatar.jpg" alt="avatar">
     <img src="img/test.png" alt="test">
